syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service User {
    rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // 通过 mobile 查询用户
    rpc GetUserByID(IDRequest) returns (UserInfoResponse); // 通过 id 查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 添加用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户
    rpc CheckPasswd(PasswdCheckInfo) returns (CheckResponse); // 检查用户密码
}

message CheckResponse {
    bool success = 1;
}

message PasswdCheckInfo {
    string password = 1;
    string encryptedPassword = 2;
}

message UpdateUserInfo {
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthday = 4;
}

message CreateUserInfo {
    string nickName = 1;
    string password = 2;
    string mobile = 3;
}

message MobileRequest {
    string mobile = 1;
}

message IDRequest {
    int32 id = 1;
}

message PageInfo {
    uint32 pageNum = 1;
    uint32 pageSize = 2;
}

message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickName = 4;
    uint64 birthday = 5;
    string gender = 6;
    int32 role = 7;
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}